fixed layout issue in dashboard

--- a/src/layout/layout.scss
+++ b/src/layout/layout.scss
@@ -17,6 +17,7 @@
   #main {
     grid-area: 3 / 2 / 3 / 3;
     height: calc(100vh - 71px);
+    overflow-x: hidden;
   }
   
   .footer {
