--- a/src/modules/smartboard/smartboard.scss
+++ b/src/modules/smartboard/smartboard.scss
@@ -380,6 +380,4 @@
 #bar{
   color: #4d4d4d;
 }
-.smartboard_div1{
-  // background-color: yellow;
-}
+
